# pta_replicator

./: .gitignore  LICENSE  README.md  pyproject.toml  sim.py
examples/: add_noise.ipynb
noise_dicts/: ng15_dict.json
pta_replicator/: constants.py  deterministic.py  red_noise.py  sim.py  simulate.py  spharmORFbasis.py  white_noise.py
pta_replicator/test/: DEJump_jump.txt  chain_1.txt  cov.npy  covarianceJumpProposalAM_jump.txt  covarianceJumpProposalSCAM_jump.txt  draw_from_prior_jump.txt  draw_from_red_prior_jump.txt  jumps.txt  pars.txt  priors.txt  runtime_info.txt
pta_replicator/test_partim/: B1855+09_fake.par  B1855+09_fake.tim
src/: deterministic.py  simulate.py  white_noise.py
test_partim/par/: B1855+09.par  B1937+21.par  J1909-3744.par
test_partim/tim/: B1855+09.tim
test_partim_small/par/: JPSR00.par  JPSR01.par  JPSR02.par
test_partim_small/tim/: fake_JPSR00_noiseonly.tim  fake_JPSR01_noiseonly.tim  fake_JPSR02_noiseonly.tim
tests/: libstempo_test_residuals.npz  libstempo_test_residuals_efac_ecorr_rn_gwb_cgw.npz  test_against_libstempo.py
