[tool.poetry]
name = "pta_replicator"
version = "0.1.0"
description = "Simulate PTA datasets"
authors = ["Bence Becsy", "Aaron Johnson"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pint-pulsar = "^0.9.8"
numpy = "^1.26.4"
astropy = "^6.0.0"
scipy = "^1.12.0"
ephem = "^4.1.5"
numba = "^0.59.0"
matplotlib = "^3.8.2"
holodeck-gw = "^1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
