[project]
name = "pta_replicator"
version = "0.1.0"
description = "Simulate PTA datasets"
authors = [{name="Bence Becsy"}, {name="Aaron Johnson"}]
readme = "README.md"

dependencies = [
             "pint-pulsar (>=0.9.8,<2.0.0)",
             "numpy (>=1.26,<3.0.0)",
             "astropy (>=6.0.0,<8.0.0)",
             "scipy (>=1.12.0,<2.0.0)",
             "ephem (>=4.1.5,<5.0.0)",
             "numba (>=0.59.0)",
             "matplotlib (>=3.8.2,<4.0.0)",
             "holodeck-gw (>=1.0,<2.0.0)",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
